opam-version: "2.0"
name: "satysfi-chemfml"
version: "1.0.0"
synopsis: "A SATySFi Package for chemical formulas."
description: """
chemfml is a SATySFi package for drawing chemical reaction formulas.
"""
maintainer: "Amadeus_vn <git@amas.dev>"
authors: "Amadeus_vn <git@amas.dev>"
license: "MIT"
homepage: "https://github.com/gw31415/satysfi-chemfml"
dev-repo: "git+https://github.com/gw31415/satysfi-chemfml.git"
bug-reports: "https://github.com/gw31415/satysfi-chemfml/issues"
depends: [
  "satysfi" { >= "0.0.6" & < "0.0.7" }
  "satyrographos" { >= "0.0.2.6" & < "0.0.3" }

  # If your library depends on other libraries, please write down here
  "satysfi-dist"
  "satysfi-base"
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "chemfml"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "chemfml"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
